--- a/views/about.hbs
+++ b/views/about.hbs
@@ -9,7 +9,7 @@
 </div>
 
 <div class="col-4">
-  <img src="assets/img/invitacion.png" class="img-thumbnail">
+  <img src="/assets/img/invitacion.png" class="img-thumbnail">
 
 </div>
 
